--- a/a.css
+++ b/a.css
@@ -46,6 +46,8 @@ hr {
   overflow: hidden;
   color: #7494a3;
 }
+
+/* 导航栏 */
 .topNavBar {
   padding: 20px 0 20px 0;
   position: fixed;
@@ -55,7 +57,6 @@ hr {
   transition: all 0.4s;
   color: #b7b7b7;
 }
-
 .topNavBar.sticky {
   background: white;
   padding: 10px 0px;
@@ -64,28 +65,23 @@ hr {
   z-index: 3;
   /* 设置元素的堆叠顺序，数值高的会叠在数值低的元素上面，当两者重叠时会显示在上面 */
 }
-
 .topNavBar-inner {
   padding: 0 16px 0 16px;
 }
-
 .topNavBar nav {
   padding-top: 8px;
 }
-
 .topNavBar nav > ul {
   list-style: none;
   margin: 0;
   padding: 0;
 }
-
 .topNavBar nav > ul > li {
   float: left;
   margin-left: 17px;
   margin-right: 17px;
   position: relative;
 }
-
 .topNavBar nav > ul > li > a {
   font-size: 12px;
   color: #1c2c39;
@@ -141,28 +137,24 @@ hr {
   display: block;
   animation: submenuSlide 0.5s;
 }
-
-
 .topNavBar .submenu > li {
   white-space: nowrap;
   /* 不换行 */
   padding: 5px 10px;
 }
-
 .topNavBar .logo {
   font-size: 24px;
   font-family: "Arial Black";
 }
-
 .topNavBar .logo .lx {
   color: #1c2c39;
   margin-right: 4px;
 }
-
 .topNavBar .logo .card {
   color: #b7b7b7;
 }
 
+/* 背景 */
 .banner {
   height: 515px;
   /* background: #D6DDDF; */
@@ -170,12 +162,12 @@ hr {
   background-position: center center;
   background-size: cover;
 }
-
 .banner .mask {
   height: 515px;
   background-color: rgba(250, 250, 250, 0.3);
 }
 
+/* 名片 */
 .userCard {
   width: 780px;
   margin-left: auto;
@@ -183,7 +175,6 @@ hr {
   background-color: #ffffff;
   box-shadow: rgba(0, 0, 0, 0.4) 0px 1px 2px 0px;
 }
-
 .userCard .welcome {
   background-color: #e06567;
   color: white;
@@ -192,7 +183,6 @@ hr {
   line-height: 22px;
   position: relative;
 }
-
 .userCard .welcome .triangle {
   display: block;
   border: 10px solid transparent;
@@ -279,6 +269,7 @@ hr {
   margin-top: -330px;
 }
 
+/* 下载按钮 */
 .downloadResume-warpper {
   text-align: center;
   margin: 60px 0;
@@ -299,7 +290,8 @@ hr {
   box-shadow: rgba(0, 0, 0, 0.4) 0px 3px 10px 0px;
 }
 
-body .skill {
+/* 技能 */
+.skill {
   width: 782px;
   margin-left: auto;
   margin-right: auto;
@@ -308,11 +300,11 @@ body .skill {
   background: #252a41;
   border-radius: 20px;
 }
-body .skill .overview {
+.skill .overview {
   width: 50%;
   padding: 60px 80px;
 }
-body .skill .overview > h2 {
+.skill .overview > h2 {
   font-size: 16px;
   line-height: 41px;
   font-weight: 600;
@@ -320,11 +312,11 @@ body .skill .overview > h2 {
   color: white;
   text-align: left;
 }
-body .skill .overview > span {
+.skill .overview > span {
   color: #64677f;
   font-size: 4px;
 }
-body .skill .overview > p {
+.skill .overview > p {
   font-size: 2px;
   color: white;
   margin-top: 50px;
@@ -429,7 +421,6 @@ body .skill .overview > p {
   text-align: center;
   margin-top: 2px;
 }
-
 .skill .skillContent {
   flex-grow: 1;
   margin: 8px 8px 8px 0;
@@ -457,7 +448,6 @@ body .skill .overview > p {
   margin: 16px 0;
   align-items: center;
 }
-
 .skill .skillContent .skillContentList > li > span {
   font-size: 12px;
   flex-shrink: 152;
@@ -467,6 +457,8 @@ body .skill .overview > p {
   width: 14px;
 }
 
+
+/* 作品展示 */
 .portfolio {
   margin: 100px auto;
   width: 930px;
@@ -519,6 +511,17 @@ body .skill .overview > p {
   border-style: solid;
   box-shadow: 0px 0px 3px 1px rgba(136, 136, 136, 0.6);
 }
+.portfolio .gallery .workList .odd .workContent::after{
+  content: '';
+  position: absolute;
+  right: -23px;
+  border: 11px solid transparent;
+  border-top-width: 22px;
+  border-bottom-width: 22px;
+  border-left-color: #BFC1CA;
+  top: 65px;
+  z-index: -1;
+}
 .portfolio .gallery .workList .odd .workContent {
   margin-right: 36px;
 }
@@ -533,8 +536,6 @@ body .skill .overview > p {
   border-bottom-width: 21px;
   border-left-color: #fcfcfc;
   top: 66px;
-  background: transparent url(img/arrows.png) center center no-repeat;
-  background-position: -28px, 0;
 }
 .portfolio .gallery .workList .even .angle {
   position: absolute;
@@ -578,104 +579,87 @@ body .skill .overview > p {
   color: #fcfcfc;
 }
 
-.hobby {
-  margin: 0 auto;
+/* 博客 */
+.blog{
   width: 930px;
+  margin: 100px auto;
+  text-align: center;
 }
-.hobby .hobbytWrapper {
-  background: #fcfcfc;
-  border: 1px solid #fcfcfc;
-  box-shadow: 0px 1px 3px 1px rgba(102, 102, 102, 0.55);
-  padding: 40px 60px;
-}
-.hobby h2 {
+.blog h2{
+  font-size: 34px;
   margin-bottom: 32px;
   color: #1c2c39;
-  text-align: center;
-  font-size: 34px;
 }
-.hobby .hobbytWrapper p {
-  margin-bottom: 40px;
-  text-align: center;
-  font-family: kaiti;
-}
-.hobby .hobbytWrapper ul {
-  display: flex;
-  justify-content: center;
-}
-.hobby .hobbytWrapper li {
+.blog .blog-box{
+  box-shadow: 0px 1px 3px 1px rgba(102, 102, 102, 0.55);
+  padding-right: 105px;
+  background: #fcfcfc;
   position: relative;
 }
-
-.hobby .hobbytWrapper li:hover span {
-  transform: translateY(8px);
-  opacity: 1;
+.blog .swiper-container{
+  /* background: #fcfcfc; */
+  
 }
-.hobby .hobbytWrapper li div {
-  border: 1px solid #d7dbde;
-  padding: 20px;
-  margin: 7px 7px;
-  background: #fcfcfc;
+.blog .swiper-container .swiper-wrapper{
+  /* padding-left: 25px;
+  padding-right: 110px; */
 }
-.hobby .hobbytWrapper li svg {
-  width: 32px;
-  height: 32px;
+.blog .swiper-container .swiper-wrapper .swiper-slide{
+  padding: 55px 75px 40px 107px;
+  color: #757575;
+  text-align: left;
+  position: relative;
 }
-.hobby .hobbytWrapper li span {
+.blog .swiper-container .swiper-wrapper .swiper-slide .mark{
   position: absolute;
-  background: #717171;
-  color: #fff;
-  font-size: 12px;
-  padding: 4px 20px;
-  border-radius: 4px;
-  left: 12px;
-  top: 83px;
-  opacity: 0;
-  transition: all 0.4s;
+  left: 42px;
+  top: 50px;
 }
-
-.experience {
-  margin: 100px auto 230px auto;
-  width: 930px;
+.blog .swiper-container .swiper-wrapper .swiper-slide svg{
+  width: 40px;
+  height: 40px;
+  
 }
-.experience h2 {
-  font-size: 34px;
-  margin-bottom: 32px;
-  color: #1c2c39;
-  text-align: center;
-}
-.experience .experienceWrapper li {
-  margin-bottom: 10px;
-  box-shadow: 2px 2px 3px 0px rgba(136, 136, 136, 0.6);
-}
-.experience .experienceWrapper li h3 {
-  background: #1c2c39;
-  color: #fff;
-  padding: 12px 30px;
-  font-size: 16px;
-}
-.experience .experienceWrapper li h3:hover {
-  cursor: pointer;
-}
-.experience .experienceWrapper li div {
-  background: #fcfcfc;
-  height: 0;
-  overflow: hidden;
-  transition: height 0.5s;
-}
-.experience .experienceWrapper li div.active {
-  height: 144px;
-}
-.experience .experienceWrapper li h4 {
-  font-size: 22px;
-  margin: 30px 30px 10px 30px;
-}
-.experience .experienceWrapper li .time {
-  color: #60727b;
+.blog .swiper-container .swiper-wrapper .blogTitle{
+  border-bottom: 1px solid #dddad9;
+  padding-bottom: 25px;
+  
+  font-size: 20px;
   font-weight: bold;
-  margin: 0 30px;
+}
+.blog .swiper-container .swiper-wrapper .bolgInfo{
+  margin-top: 25px;
+}
+.blog .swiper-nav{
+  position: absolute;
+  top: 25px;
+  right: 25px;
+  color: #3e4452;
+}
+.blog .blog-box > .swiper-button-prev,
+.blog .blog-box > .swiper-button-next{
+  padding: 27px 26px 26px 27px;
+  border: 1px solid #d7dbde;
+  margin: 10px auto;
+  color: #3e4452;
+  size: 14px;
+  /* position: static; */
+  top: 25px;
+  right: 25px;
+  --swiper-navigation-size: 10px;
+}
+.blog .blog-box > .swiper-button-prev{
+  top: 90px;
+  left: 850px;
+}
+.blog .swiper-nav > div::after{
+  /* content: ''; */
+}
+.blog .swiper-nav .icon{
+  color: #3e4452;
 }
 
+/* 日历 */
 .calendar {
   margin: 0 auto;
   width: 930px;
@@ -753,9 +737,6 @@ body .skill .overview > p {
 .calendar .calendarWrapper .switchingTime > span{
   margin: 0 40px;
 }
-.calendar .calendarWrapper .switchingTime > div{
-  
-}
 .calendar .calendarWrapper .switchingTime svg{
   width: 0.7em;
   height: 0.7em;
@@ -798,4 +779,104 @@ body .skill .overview > p {
   color: #373b42;
   font-size: 12px;
   padding: 21px 0 21px 21px;
+}
+
+/* 兴趣爱好 */
+.hobby {
+  margin: 0 auto;
+  width: 930px;
+}
+.hobby .hobbytWrapper {
+  background: #fcfcfc;
+  border: 1px solid #fcfcfc;
+  box-shadow: 0px 1px 3px 1px rgba(102, 102, 102, 0.55);
+  padding: 40px 60px;
+}
+.hobby h2 {
+  margin-bottom: 32px;
+  color: #1c2c39;
+  text-align: center;
+  font-size: 34px;
+}
+.hobby .hobbytWrapper p {
+  margin-bottom: 40px;
+  text-align: center;
+  font-family: kaiti;
+}
+.hobby .hobbytWrapper ul {
+  display: flex;
+  justify-content: center;
+}
+.hobby .hobbytWrapper li {
+  position: relative;
+}
+
+.hobby .hobbytWrapper li:hover span {
+  transform: translateY(8px);
+  opacity: 1;
+}
+.hobby .hobbytWrapper li div {
+  border: 1px solid #d7dbde;
+  padding: 20px;
+  margin: 7px 7px;
+  background: #fcfcfc;
+}
+.hobby .hobbytWrapper li svg {
+  width: 32px;
+  height: 32px;
+}
+.hobby .hobbytWrapper li span {
+  position: absolute;
+  background: #717171;
+  color: #fff;
+  font-size: 12px;
+  padding: 4px 20px;
+  border-radius: 4px;
+  left: 12px;
+  top: 83px;
+  opacity: 0;
+  transition: all 0.4s;
+}
+
+/* 经历 */
+.experience {
+  margin: 100px auto 230px auto;
+  width: 930px;
+}
+.experience h2 {
+  font-size: 34px;
+  margin-bottom: 32px;
+  color: #1c2c39;
+  text-align: center;
+}
+.experience .experienceWrapper li {
+  margin-bottom: 10px;
+  box-shadow: 2px 2px 3px 0px rgba(136, 136, 136, 0.6);
+}
+.experience .experienceWrapper li h3 {
+  background: #1c2c39;
+  color: #fff;
+  padding: 12px 30px;
+  font-size: 16px;
+}
+.experience .experienceWrapper li h3:hover {
+  cursor: pointer;
+}
+.experience .experienceWrapper li div {
+  background: #fcfcfc;
+  height: 0;
+  overflow: hidden;
+  transition: height 0.5s;
+}
+.experience .experienceWrapper li div.active {
+  height: 144px;
+}
+.experience .experienceWrapper li h4 {
+  font-size: 22px;
+  margin: 30px 30px 10px 30px;
+}
+.experience .experienceWrapper li .time {
+  color: #60727b;
+  font-weight: bold;
+  margin: 0 30px;
 }
