--- a/a.css
+++ b/a.css
@@ -158,7 +158,7 @@ hr {
 .banner {
   height: 515px;
   /* background: #D6DDDF; */
-  background-image: url(./img/bg2.jpg);
+  background-image: url(./img/bg.jpg);
   background-position: center center;
   background-size: cover;
 }
@@ -647,7 +647,7 @@ hr {
 }
 .blog .blog-box > .swiper-button-prev:focus,
 .blog .blog-box > .swiper-button-next:focus{
-  /* 取出swiper前进和后退按钮点击时出现的边框 */
+  /* 去除swiper前进和后退按钮点击时出现的边框 */
   outline: none;
 }
 .blog .swiper-nav .icon{
