--- a/css/a.css
+++ b/css/a.css
@@ -157,8 +157,7 @@ hr {
 /* 背景 */
 .banner {
   height: 515px;
-  /* background: #D6DDDF; */
-  background-image: url(./img/bg.jpg);
+  background-image: url(../img/bg.jpg);
   background-position: center center;
   background-size: cover;
 }
@@ -545,7 +544,7 @@ hr {
   border-bottom-width: 21px;
   border-right-color: #fcfcfc;
   top: 66px;
-  background: transparent url(img/arrows.png) center center no-repeat;
+  background: transparent url(../img/arrows.png) center center no-repeat;
   background-position: -3px, 0;
 }
 .portfolio .gallery .workList .workContent .title {
@@ -573,6 +572,9 @@ hr {
   padding: 6px 16px;
   margin: 15px 60px;
   box-shadow: 0px 0px 3px 1px rgba(136, 136, 136, 0.6);
+}
+.portfolio .gallery .workList .workContent button:focus{
+  outline: none;
 }
 .portfolio .gallery .workList .workContent button:hover {
   background: #1c2c39;
@@ -635,11 +637,15 @@ hr {
   margin: 10px auto;
   color: #3e4452;
   size: 14px;
-  /* position: static; */
   top: 25px;
   right: 25px;
   /* 设置swiper按钮的大小 */
   --swiper-navigation-size: 10px;
+  
+}
+.blog .blog-box > .swiper-button-prev:hover,
+.blog .blog-box > .swiper-button-next:hover{
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 3px 10px 0px;
 }
 .blog .blog-box > .swiper-button-prev{
   top: 90px;
